# attrconf

./: LICENSE  README.md  pyproject.toml
attrconf/: __init__.py  config.py
test/: test.py  test2.py
